@@ -1,3 +1,8 @@
+2006-09-08  Carlos Garnacho  <carlosg@gnome.org>
+
+	* Utils/Platform.pm: cache the detected platform, it very likely won't
+	vary ever for the same installation.
+
 2006-09-06  Carlos Garnacho  <carlosg@gnome.org>
 
 	* Release 1.9.5
